--- a/src/product.html
+++ b/src/product.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 @@include('html/head.html', {
 'title': 'Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)'
 })
@@ -10,31 +10,31 @@
         <main class="page product">
             <div class="page__container">
                 <ul class="breadcrumbs">
-                    <li class="breadrrumbs__item"><a href="">Главная</a></li>
-                    <li class="breadrrumbs__item"><a href="">Ноутбуки</a></li>
-                    <li class="breadrrumbs__item"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</a></li>
+                    <li class="breadcrumbs__item"><a href="/">Головна</a></li>
+                    <li class="breadcrumbs__item"><a href="./catalog.html">Ноутбуки</a></li>
+                    <li class="breadcrumbs__item"><span class="breadcrumbs__item-current">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</span></li>
                 </ul>
                 <div class="product__body">
                     <div class="gallery">
                         <div class="gallery__slider swiper">
                             <div class="gallery__wrapper swiper-wrapper">
                                 <div data-type="gallery" class="gallery__slide swiper-slide"><img
-                                        src="img/product5.webp" alt=""></div>
+                                        src="img/product5.webp" alt="Laptop"></div>
                                 <div data-type="gallery" class="gallery__slide swiper-slide"><img src="img/product2.png"
-                                        alt=""></div>
+                                        alt="Laptop"></div>
                                 <div data-type="gallery" class="gallery__slide swiper-slide"><img
-                                        src="img/product3.webp" alt=""></div>
+                                        src="img/product3.webp" alt="Laptop"></div>
                                 <div data-type="gallery" class="gallery__slide swiper-slide"><img src="img/product4.png"
-                                        alt=""></div>
+                                        alt="Laptop"></div>
                             </div>
                         </div>
                         <div class="thumbs-slider__wrapper">
                             <div class="thumbs__slider swiper">
                                 <div class="thumbs__wrapper swiper-wrapper">
-                                    <div class="thumbs__slide swiper-slide"><img src="img/product5.webp" alt=""></div>
-                                    <div class="thumbs__slide swiper-slide"><img src="img/product2.png" alt=""></div>
-                                    <div class="thumbs__slide swiper-slide"><img src="img/product3.webp" alt=""></div>
-                                    <div class="thumbs__slide swiper-slide"><img src="img/product4.png" alt=""></div>
+                                    <div class="thumbs__slide swiper-slide"><img src="img/product5.webp" alt="Laptop"></div>
+                                    <div class="thumbs__slide swiper-slide"><img src="img/product2.png" alt="Laptop"></div>
+                                    <div class="thumbs__slide swiper-slide"><img src="img/product3.webp" alt="Laptop"></div>
+                                    <div class="thumbs__slide swiper-slide"><img src="img/product4.png" alt="Laptop"></div>
                                 </div>
                             </div>
                             <button class="thumbs-prev swiper-button-prev">
@@ -51,21 +51,21 @@
                     </div>
                     <div class="product__text">
                         <h1 class="product__title title-second">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</h1>
-                        <span class="product__status">В наличии</span>
-                        <a href="./reviews.html" class="product__link">Оставить отзыв</a>
+                        <span class="product__status">В наявності</span>
+                        <a href="./reviews.html" class="product__link">Залишити відгук</a>
                         <div class="product__row">
-                            <div class="product__price">
-                                <p class="product__old-price">19999 грн</p>
-                                <p class="product__actual-price">15000 грн</p>
+                            <div class="product-price">
+                                <p class="product-price__old">19999 грн</p>
+                                <p class="product-price__actual">15000 грн</p>
                             </div>
-                            <button data-type="cart" class="product__btn button">Купить</button>
+                            <button data-type="cart" class="product__btn button">Придбати</button>
                         </div>
                     </div>
                     <div data-tabs class="product-add-info">
                         <nav data-tabs-titles class="product-add-info__navigation">
                             <button type="button" class="product-add-info__title _tab-active">Оплата</button>
                             <button type="button" class="product-add-info__title">Доставка</button>
-                            <button type="button" class="product-add-info__title">Доп. услуги</button>
+                            <button type="button" class="product-add-info__title">Дод. послуги</button>
                         </nav>
                         <div data-tabs-body class="product-add-info__content">
                             <div class="product-add-info__body">
@@ -77,70 +77,70 @@
                             </div>
                             <div class="product-add-info__body">
                                 <p>
-                                    Новая Почта:​​​​​​ Не все отделения Новой Почты возобновили работу.
-                                    ​Отправка товара может занимать 1-3 рабочих дня.По каждому заказу мы уточняем
-                                    возможность отправки.
-                                    Курьерская доставка CompX в г.Киев:Левый берег - 190 грнПравый берег - 350 грнЗа
-                                    город - от 500 грн (обсуждается индивидуально)Быстрая доставка iPOST:Левый берег
+                                    Нова Пошта: ​​ Усі відділення Нової Пошти відновили роботу.
+                                    Відправка товару може займати 1-3 робочі дні. За кожним замовленням ми уточнюємо
+                                    можливість надсилання.
+                                    Кур'єрська доставка CompX до м.Київ:Лівий берег - 190 грнПравий берег - 350 грнЗа
+                                    місто - від 500 грн (обговорюється індивідуально)Швидка доставка iPOST:Лівий берег
                                     -
-                                    190 грнПравый берег - 350 грн
-                                    Предоплата за отправку некоторых товаров: Мониторы/корпусы/крупногабаритные
-                                    товары -
-                                    500 грн Видеокарты от 20 тис.грн - 300 грн
+                                    190 грнПравий берег - 350 грн
+                                    Передплата за відправку деяких товарів: Монітори/корпуси/великогабаритні
+                                    товари -
+                                    500 грн Відеокарти від 20 тис.грн – 300 грн
                                 </p>
                             </div>
                             <div class="product-add-info__body">
                                 <p>
-                                    Не все отделения Новой Почты возобновили работу.
-                                    ​Отправка товара может занимать 1-3 рабочих дня.По каждому заказу мы уточняем
-                                    возможность отправки.
-                                    Курьерская доставка CompX в г.Киев:Левый берег - 190 грнПравый берег - 350 грнЗа
-                                    город - от 500 грн (обсуждается индивидуально)Быстрая доставка iPOST:Левый берег
+                                    Нова Пошта: ​​ Усі відділення Нової Пошти відновили роботу.
+                                    Відправка товару може займати 1-3 робочі дні. За кожним замовленням ми уточнюємо
+                                    можливість надсилання.
+                                    Кур'єрська доставка CompX до м.Київ:Лівий берег - 190 грнПравий берег - 350 грнЗа
+                                    місто - від 500 грн (обговорюється індивідуально)Швидка доставка iPOST:Лівий берег
                                     -
-                                    190 грнПравый берег - 350 грн
-                                    Предоплата за отправку некоторых товаров: Мониторы/корпусы/крупногабаритные
-                                    товары -
-                                    500 грн Видеокарты от 20 тис.грн - 300 грн
+                                    190 грнПравий берег - 350 грн
+                                    Передплата за відправку деяких товарів: Монітори/корпуси/великогабаритні
+                                    товари -
+                                    500 грн Відеокарти від 20 тис.грн – 300 грн
                                 </p>
                             </div>
                         </div>
                     </div>
                     <div data-tabs class="product-details">
                         <nav data-tabs-titles class="product-details__navigation">
-                            <button type="button" class="product-details__title _tab-active">Описание</button>
+                            <button type="button" class="product-details__title _tab-active">Опис</button>
                             <button type="button" class="product-details__title">Характеристики</button>
                         </nav>
                         <div data-tabs-body class="product-details__content">
                             <div class="product-details__body">
                                 <p>
-                                    Предлагаем Вашему вниманию Ноутбук 15.6" Gigabyte AORUS 15 BSF (BSF-73KZ754SD)
-                                    Гарантия:
-                                    24 мес.
+                                    Пропонуємо до Вашої уваги Ноутбук 15.6" Gigabyte AORUS 15 BSF (BSF-73KZ754SD)
+                                    Гарантія:
+                                    24 міс.
                                 </p>
                             </div>
                             <table class="table product-details__body">
                                 <tr class="table__row">
-                                    <th class="table__item">Состояние:</th>
-                                    <td class="table__item">Новый</td>
+                                    <th class="table__item">Стан:</th>
+                                    <td class="table__item">Новий</td>
                                 </tr>
                                 <tr class="table__row">
-                                    <th class="table__item">Процессор:</t>
+                                    <th class="table__item">Процесор:</t>
                                     <td class="table__item">Intel Core i7-13700H</td>
                                 </tr>
                                 <tr class="table__row">
-                                    <th class="table__item">Диагональ экрана:</th>
+                                    <th class="table__item">Діагональ екрану:</th>
                                     <td class="table__item">15.6</td>
                                 </tr>
                                 <tr class="table__row">
-                                    <th class="table__item">Тип матрицы:</th>
+                                    <th class="table__item">Тип матриці:</th>
                                     <td class="table__item">IPS</td>
                                 </tr>
                                 <tr class="table__row">
-                                    <th class="table__item">Тип видеокарты:</th>
-                                    <td class="table__item">Дискретная</td>
+                                    <th class="table__item">Тип видеокарти:</th>
+                                    <td class="table__item">Дискретна</td>
                                 </tr>
                                 <tr class="table__row">
-                                    <th class="table__item">Объем оперативной памяти:</th>
+                                    <th class="table__item">Обсяг оперативної пам'яті:</th>
                                     <td class="table__item">16 ГБ</td>
                                 </tr>
                             </table>
