--- a/src/html/header.html
+++ b/src/html/header.html
@@ -49,7 +49,7 @@
 						<svg width="30" height="30">
 							<use xlink:href="img/icons/icons.svg#cart"></use>
 						</svg>
-						<span class="header-cart__text">Корзина</span>
+						<span class="header-cart__text">Кошик</span>
 						<span class="header-cart__number">3</span>
 					</button>
 				</div>
@@ -63,19 +63,19 @@
 					<button class="header-catalog__btn" type="button" data-spoller>Каталог</button>
 					<ul class="header-catalog__list">
 						<li class="hedaer-catalog__item"><a href="./catalog.html">Ноутбуки</a></li>
-						<li class="hedaer-catalog__item"><a href="./catalog.html">Роутеры</a></li>
-						<li class="hedaer-catalog__item"><a href="./catalog.html">Роутеры</a></li>
-						<li class="hedaer-catalog__item"><a href="./catalog.html">Ноутбуки</a></li>
+						<li class="hedaer-catalog__item"><a href="./catalog.html">Комплекутючі для ПК</a></li>
+						<li class="hedaer-catalog__item"><a href="./catalog.html">Роутери</a></li>
+						<li class="hedaer-catalog__item"><a href="./catalog.html">Монітори</a></li>
 					</ul>
 				</div>
 			</li>
-			<li class="header-menu__item"><a href="./sale.html">Акции</a></li>
+			<li class="header-menu__item"><a href="./sale.html">Акції</a></li>
 			<li class="header-menu__item"><a href="#">Оплата</a></li>
-			<li class="header-menu__item"><a href="#">Гарантия</a></li>
-			<li class="header-menu__item"><a href="./contacts.html">Контакты</a></li>
+			<li class="header-menu__item"><a href="#">Гарантія</a></li>
+			<li class="header-menu__item"><a href="./contacts.html">Контакти</a></li>
 			<li class="header-menu__item"><a href="#">Доставка</a></li>
-			<li class="header-menu__item"><a href="#">О нас</a></li>
-			<li class="header-menu__item"><a href="./reviews.html">Отзывы</a></li>
+			<li class="header-menu__item"><a href="#">Про нас</a></li>
+			<li class="header-menu__item"><a href="./reviews.html">Відгуки</a></li>
 		</ul>
 	</nav>
 </header>
